BASIC STYLE Fix overflow Add styling to single note

--- a/notes-app/src/styles/singleNote.scss
+++ b/notes-app/src/styles/singleNote.scss
@@ -1,5 +1,5 @@
-.listCont {
-	width: 75%;
+.singNoteCont {
+	width: 100%;
 	display: flex;
 	flex-wrap:  wrap;
 	align-items: flex-start;
@@ -7,7 +7,7 @@
 
 
 	.noteCont {
-		width: 25%;
+		width: 100%;
 		height: 300px;
 		margin-right: 12px;
 		margin-bottom: 12px;
